# MapNickAutotools

./: .sconsign.dblite  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  SConstruct  aclocal.m4  config.h.in  config.py  configure  configure.ac  index.html  myconfigure.sh  reconfigure.sh  runtest.sh
agg/: Makefile.in
agg/include/: Makefile.in
agg/src/: Makefile.in
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.2t  traces.3
bindings/: Makefile.in
bindings/python/: Makefile.am  Makefile.in  mapnik_color.os  mapnik_coord.os  mapnik_datasource.os  mapnik_datasource_cache.os  mapnik_envelope.os  mapnik_expression.os  mapnik_feature.os  mapnik_featureset.os  mapnik_font_engine.os  mapnik_geometry.os  mapnik_image.os  mapnik_image_view.os  mapnik_layer.os  mapnik_line_pattern_symbolizer.os  mapnik_line_symbolizer.os  mapnik_map.os  mapnik_parameters.os  mapnik_point_symbolizer.os  mapnik_polygon_pattern_symbolizer.os  mapnik_polygon_symbolizer.os  mapnik_proj_transform.os  mapnik_projection.os  mapnik_python.os  mapnik_query.os  mapnik_raster_symbolizer.os  mapnik_rule.os  mapnik_shield_symbolizer.os  mapnik_stroke.os  mapnik_style.os  mapnik_symbolizer.os  mapnik_text_symbolizer.os  mapnik_view_transform.os  python_cairo.os
bindings/python/mapnik/: Makefile.in
bindings/python/mapnik/ogcserver/: Makefile.in  common.py  wms130.py
demo/: Makefile.am
demo/c++/: Makefile  Makefile.am  missing.cpp  rundemo.cpp
demo/python/: rundemo.py
docs/api_docs/python/: mapnik.Coord-class.html  mapnik.ogcserver.wms111.ExceptionHandler-class.html
include/: Makefile.am  Makefile.in
include/mapnik/: Makefile.am  Makefile.in  agg_renderer.hpp  alldeps.mak  arrow.hpp  attribute_collector.hpp  attribute_descriptor.hpp  boostinc.hpp  box2d.hpp  cairo_renderer.hpp  color.hpp  color_factory.hpp  config_error.hpp  coord.hpp  coord_array.hpp  css_color_grammar.hpp  ctrans.hpp  datasource.hpp  datasource_cache.hpp  distance.hpp  enumeration.hpp  expression_evaluator.hpp  expression_grammar.hpp  expression_node.hpp  expression_string.hpp  factory.hpp  feature.hpp  feature_factory.hpp  feature_layer_desc.hpp  feature_style_processor.hpp  feature_type_style.hpp  filter_factory.hpp  filter_featureset.hpp  font_engine_freetype.hpp  font_set.hpp  freetype.hpp  gamma.hpp  geom_util.hpp  geometry.hpp  global.hpp  (+69 more)
m4/: freetype2.m4
plugins/: Makefile.in
plugins/input/: Makefile.in
plugins/input/gdal/: Makefile.in
plugins/input/kismet/: Makefile.in
plugins/input/ogr/: Makefile.in
plugins/input/osm/: Makefile.am  Makefile.in  osm_datasource.cpp  osm_datasource.hpp  osmparser.cpp  osmparser.h  stdinc.hpp  test.xml
plugins/input/osm/demo/: Makefile.am  MapSource.cpp  MapSource.h  easymapnik.cpp
plugins/input/osm/render/: Makefile.am  render.cpp
plugins/input/postgis/: Makefile.in
plugins/input/raster/: Makefile.in
plugins/input/shape/: Makefile.in
plugins/input/sqlite/: Makefile.in
src/: Makefile.am  Makefile.in  agg_renderer.cpp  agg_renderer.os  arrow.cpp  box2d.cpp  box2d.os  cairo_renderer.cpp  color.cpp  color.os  datasource_cache.cpp  datasource_cache.os  distance.cpp  expression_string.cpp  expression_string.ii  expression_string.s  feature_style_processor.cpp  filter_factory.cpp  font_engine_freetype.cpp  font_set.cpp  graphics.cpp  image_cache.cpp  image_reader.cpp  image_util.cpp  layer.cpp  libxml2_loader.cpp  line_pattern_symbolizer.cpp  load_map.cpp  map.cpp  memory.cpp  memory_datasource.cpp  params.cpp  placement_finder.cpp  plugin.cpp  png_reader.cpp  point_symbolizer.cpp  polygon_pattern_symbolizer.cpp  proj_transform.cpp  projection.cpp  rule.cpp  (+9 more)
src/.deps/: processdeps.pl
utils/: Makefile.in
utils/ogrindex/: Makefile  Makefile.in
utils/pgsql2sqlite/: Makefile.in
utils/shapeindex/: Makefile.in
